# R-type

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  COMMIT_CONVENTION.md  CONTRIBUTING.md  Comparative Study.md  Doxyfile  README.md  compiling.sh  etapes  gitrow.sh  installvcpkg.sh  level_creator.py  vcpkg.json
.github/workflows/: compiler_check.yml
Database/: r-type.db
UIScenes/: createParty.cfg  customParty.cfg  dashboard_player.cfg  helppage.cfg  homepage.cfg  infospage.cfg  joinParty.cfg  leaderboard.cfg  loginpage.cfg  registerpage.cfg  settings.cfg
apocalypse/: main.cpp
assets/levels/: easy.txt  easy_2.txt  easy_3.txt  hard.txt  hard_2.txt  hard_3.txt  medium.txt  medium_2.txt  medium_3.txt  test.txt  test_script.txt
assets_UI/images/.comments/: help.png.xml
docs/: adding_content.dox  client.dox  engine.dox  main_page.dox  protocol.md  server.dox
docs/html/: Client_8md.html  GameSettings_8hpp.html  GameSettings_8hpp__dep__incl.map  GameSettings_8hpp__dep__incl.md5  GameSettings_8hpp__incl.map  GameSettings_8hpp__incl.md5  GameSettings_8hpp_source.html  ResourceManager_8hpp.html  ResourceManager_8hpp__dep__incl.map  ResourceManager_8hpp__dep__incl.md5  ResourceManager_8hpp__incl.map  ResourceManager_8hpp__incl.md5  ResourceManager_8hpp_source.html  Server_8md.html  add.html  adding__content_8dox.html  annotated.html  classClient-members.html  classClient.html  classClient__coll__graph.map  classClient__coll__graph.md5  classGameInstance-members.html  classGameInstance.html  classGameInstance__coll__graph.map  classGameInstance__coll__graph.md5  classGameManager-members.html  classGameManager.html  classGameSettings-members.html  classGameSettings.html  classGraphicsClient-members.html  classGraphicsClient.html  classGraphicsClient__coll__graph.map  classGraphicsClient__coll__graph.md5  classNonExistentComponentType-members.html  classNonExistentComponentType.html  classNonExistentComponentType__coll__graph.map  classNonExistentComponentType__coll__graph.md5  classNonExistentEntityID-members.html  classNonExistentEntityID.html  classNonExistentEntityID__coll__graph.md5  (+335 more)
docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  (+147 more)
docs/latex/: Client_8md.tex  GameSettings_8hpp.tex  GameSettings_8hpp__dep__incl.md5  GameSettings_8hpp__incl.md5  GameSettings_8hpp_source.tex  ResourceManager_8hpp.tex  ResourceManager_8hpp__dep__incl.md5  ResourceManager_8hpp__incl.md5  ResourceManager_8hpp_source.tex  Server_8md.tex  add.tex  adding__content_8dox.tex  annotated.tex  classClient.tex  classClient__coll__graph.md5  classGameInstance.tex  classGameInstance__coll__graph.md5  classGameManager.tex  classGameSettings.tex  classGraphicsClient.tex  classGraphicsClient__coll__graph.md5  classNonExistentComponentType.tex  classNonExistentComponentType__inherit__graph.md5  classNonExistentEntityID.tex  classNonExistentEntityID__coll__graph.md5  classResourceManager.tex  classServer.tex  classServer__coll__graph.md5  classentity.tex  classregistry.tex  client_8dox.tex  client_8hpp.tex  client_8hpp__dep__incl.md5  client_8hpp__incl.md5  client_8hpp_source.tex  client_page.tex  comparatives__case__study_8md.tex  components_8hpp.tex  components_8hpp__dep__incl.md5  components_8hpp__incl.md5  (+141 more)
ecs-engine/: CMakeLists.txt
ecs-engine/include/ecs/: AiSystem.hpp  CollisionSystem.hpp  Component.hpp  DestroySystem.hpp  Entity.hpp  HealthSystem.hpp  MovementSystem.hpp  NetworkSystem.hpp  Registry.hpp  RenderSystem.hpp  Scene_loader.hpp  ScreenConfig.hpp  ShootingSystem.hpp  SpawnSystem.hpp  System.hpp
ecs-engine/include/network/: NetworkManager.hpp
ecs-engine/src/: composants.cpp
ecs-engine/src/systems/: AiSystem.cpp  CollisionSystem.cpp  DestroySystem.cpp  HealthSystem.cpp  MovementSystem.cpp  NetworkSystem.cpp  RenderSystem.cpp  Scene_loader.cpp  ShootingSystem.cpp  SpawnSystem.cpp
engine/: choices.txt  compilation_cmd
engine/include/: ResourceManager.hpp  components.hpp  entity.hpp  exceptions.hpp  registry.hpp  systems.hpp
engine/src/: registry_entities.cpp  registry_single_comp.tpp  registry_systems.cpp  registry_tables.tpp  systems.cpp
engine/tests/: registry_tests.cpp  systems_tests.cpp
mains/client/: main.cpp
mains/server/: main.cpp
network/: test.cpp
network/RTypeClient/: Makefile  main.cpp
network/RTypeServer/: Makefile  main.cpp
r-type-client/: CMakeLists.txt
r-type-client/include/: Audio_Handler.hpp  Chat.hpp  Display_Handler.hpp  EcsWrapper.hpp  Exceptions.hpp  FontManager.hpp  Game.hpp  GameClient.hpp  GameModeMenu.hpp  HelpMenu.hpp  Input_Handler.hpp  MultiplayerForm.hpp  NetworkClient.hpp  Networkdata.h  RoomListMenu.hpp  RoomLobby.hpp  RoomMenu.hpp  Scene.hpp  SettingsMenu.hpp  menu.hpp  stages.hpp
r-type-client/res/config/: background.json  enemy_sprites.json  fire_sprites.json  player_sprites.json
r-type-client/src/: Chat.cpp  EcsWrapper.cpp  FontManager.cpp  Game.cpp  GameClient.cpp  GameModeMenu.cpp  HelpMenu.cpp  MultiplayerForm.cpp  NetworkClient.cpp  RoomListMenu.cpp  RoomLobby.cpp  RoomMenu.cpp  Scene.cpp  SettingsMenu.cpp  main.cpp  menu.cpp
r-type-client/src/graphics/: Audio_Handler.cpp  Display_Handler.cpp  Input_Handler.cpp
r-type-server/: CMakeLists.txt
r-type-server/include/: Broadcast.hpp  GameRoom.hpp  NetworkManager.hpp  Networkdata.h  Package.hpp  RoomManager.hpp
r-type-server/src/: Broadcast.cpp  GameRoom.cpp  NetworkManager.cpp  RoomManager.cpp  main.cpp  signal.cpp
rtype_gameInstance/include/: GameSettings.hpp  Server.md  gameInstance.hpp
rtype_gameInstance/src/: commands.cpp  decodeur.cpp  init_gameInstance.cpp  level_handling.cpp
rtype_gameManager/include/: gameManager.hpp
rtype_gameManager/src/: gameManager.cpp
rtype_graphicsClient/include/: Client.md  graphicsClient.hpp
rtype_graphicsClient/src/: commands.cpp  decodeur.cpp  init_graphicsClient.cpp
shared/: CMakeLists.txt
utility_classes/include/: Factory.hpp  Network.hpp  NetworkManager.md  Types.hpp  UIHandler.hpp  logic_functions.hpp
utility_classes/src/: Factory.cpp  Network.cpp  UIHandler.cpp  logic_functions.cpp
(+67 files in other folders)
